--- a/package.json
+++ b/package.json
@@ -12,15 +12,16 @@
   },
   "license": "ISC",
   "author": "Ynt",
-  "type": "commonjs",
   "engines": {
     "node": ">=22.19.0"
   },
   "main": "index.js",
   "scripts": {
-    "test": "jest --node-options=\"--harmony-set-methods\""
+    "test": "node --no-warnings --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
+  "type": "module",
   "devDependencies": {
-    "jest": "30.1.3"
+    "jest": "30.1.3",
+    "supertest": "^7.1.4"
   }
 }
